--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -37,6 +37,8 @@ spec:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: spec.nodeName
+            - name: NRIA_PASSTHROUGH_ENVIRONMENT
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT"
       volumes:
         - name: host-volume
           hostPath:
