--- a/nr-kubernetes-definition.yml
+++ b/nr-kubernetes-definition.yml
@@ -1,5 +1,5 @@
 name: com.newrelic.kubernetes
-description: New Relic Infrastructure’s Integration for collecting metrics for your Kubernetes objects.
+description: "This New Relic Infrastructure integration collects metrics for your Kubernetes clusters and allows you to alert on them. To learn more, visit: https://docs.newrelic.com/docs/kubernetes-monitoring-integration-beta."
 protocol_version: 2
 os: linux
 
