--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -30,6 +30,8 @@ spec:
             - mountPath: /var/run/docker.sock
               name: host-docker-socket
           env:
+            - name: CLUSTER_NAME
+              value: <YOUR_CLUSTER_NAME>
             - name: NRIA_LICENSE_KEY
               value: <YOUR_LICENSE_KEY>
             - name: NRIA_DISPLAY_NAME
@@ -38,7 +40,7 @@ spec:
                   apiVersion: v1
                   fieldPath: spec.nodeName
             - name: NRIA_PASSTHROUGH_ENVIRONMENT
-              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT"
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME"
       volumes:
         - name: host-volume
           hostPath:
