--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -13,6 +13,9 @@ spec:
     metadata:
       labels:
         name: newrelic-infra
+      annotations:
+        scheduler.alpha.kubernetes.io/tolerations: |
+          [{"operator": "Exists", "effect": "NoSchedule"}]
     spec:
       containers:
         - name: newrelic-infra
@@ -48,3 +51,6 @@ spec:
         - name: host-docker-socket
           hostPath:
             path: /var/run/docker.sock
+      tolerations:
+        - operator: "Exists"
+          effect: "NoSchedule"
