Added VERBOSE to false as default for giving context to customers

--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -72,6 +72,8 @@ spec:
               value: <YOUR_CLUSTER_NAME>
             - name: NRIA_LICENSE_KEY
               value: <YOUR_LICENSE_KEY>
+            - name: NRIA_VERBOSE
+              value: 0
             - name: NRIA_DISPLAY_NAME
               valueFrom:
                 fieldRef:
