[kubernetes] Update deployment file to use `newrelic/ohaik:1.0.0-beta4-2`

--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -54,7 +54,7 @@ spec:
       serviceAccountName: newrelic
       containers:
         - name: newrelic-infra
-          image: newrelic/ohaik:1.0.0-beta4
+          image: newrelic/ohaik:1.0.0-beta4-2
           resources:
             limits:
               memory: 100Mi
