Discovery Cache mechanisms
This patch defines a `DiscoveryCacher` entity and provided the required
adapters to make it work with the KSM and Kubelet discovery mechanisms.

This patch DOES NOT integrate it into the working integration. In the following
patches, the next tasks will be performed:

* Wrap the current KSM and Kubelet discoverer instances into a DiscoveryCacher
  to enable the caching of discovered endpoints.

* Wrap the current `Client` implementationts to report connection failures
  and retrigger discovery mechanisms if the connection from a cached client
  fails.

--- a/papers_manifest.yml
+++ b/papers_manifest.yml
@@ -39,6 +39,10 @@ golang:
     license: Unknown
     license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/metric
+  github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/storage:
+    license: Unknown
+    license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
+    project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/storage
   github.com/newrelic/infra-integrations-beta/vendor/github.com/PuerkitoBio/purell:
     license: BSD-3-Clause
     license_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/PuerkitoBio/purell/LICENSE
