--- a/papers_manifest.yml
+++ b/papers_manifest.yml
@@ -703,3 +703,7 @@ golang:
     license: Apache-2.0
     license_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kube-openapi/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kube-openapi/pkg/common
+  github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kubernetes/pkg/kubelet/apis/stats/v1alpha1:
+    license: Apache-2.0
+    license_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kubernetes/LICENSE
+    project_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kubernetes/pkg/kubelet/apis/stats/v1alpha1
