Feature branch for performance improvements. (#112)
* IHOST-591 Moving data package code (#101)

* IHOST-590 Follower role does not call KSM anymore.

* Removed non needed groupers

* Moved groupers to proper package owners

* Temporary comented non used code

* Updated papers config

* Moved populators to each own package

* Removed non used patcher

* data package reorganised in just one file

* IHOST-590 Follower role does not call KSM anymore. (#99)

* IHOST-591 Parsing /pods kubelet endpoint (#102)

* Parsing /pods kubelet endpoint

* Improved tests

* Adding missing data

* Addressed few code review issues

* IHOST-594 Grouping kubelet data (#104)

* IHOST-592 definition (#106)

* IHOST-592 definition

* Fixed tests

* Fixed typo in comment

* Using /pods struct from k8s api

* Checking for possible empty metric values (#107)

* Checking for possible empty metric values

* Handling empty container deploymentName

* Handling zero value on time

* Create labels map only if needed

* OneMetricPerLabel is now a TransformFunc (#110)

* Updated CHANGELOG with latest performance improvements

* Fixing to Uppercase constant in metric pkg

* Fixed typo in Changelog

--- a/papers_manifest.yml
+++ b/papers_manifest.yml
@@ -15,6 +15,10 @@ golang:
     license: Unknown
     license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/endpoints
+  github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/ksm:
+    license: Unknown
+    license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
+    project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/ksm
   github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/ksm/endpoints:
     license: Unknown
     license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
@@ -27,6 +31,10 @@ golang:
     license: Unknown
     license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/ksm/prometheus
+  github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/kubelet:
+    license: Unknown
+    license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
+    project_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/kubelet
   github.com/newrelic/infra-integrations-beta/integrations/kubernetes/src/kubelet/endpoints:
     license: Unknown
     license_url: github.com/newrelic/infra-integrations-beta/integrations/kubernetes/LICENSE
