Update our DS file to deploy our integration in "default" namespace
Currently, we are deploying our integration to 'kube-system' namespace. That
isn't the best option because the purpose of that namespace is for storing k8s
components. In our case, it's better to deploy to the "default" namespace and
let the user pick the namespace depending on their requirements.

--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -3,7 +3,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: newrelic
-  namespace: kube-system
 automountServiceAccountToken: true
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -30,13 +29,12 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: newrelic
-  namespace: kube-system
+  namespace: default
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: newrelic-infra
-  namespace: kube-system
   labels:
     app: newrelic-infra
 spec:
