Add github.com/prometheus/common/expfmt dependency

--- a/papers_manifest.yml
+++ b/papers_manifest.yml
@@ -207,6 +207,10 @@ golang:
     license: Apache-2.0
     license_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/prometheus/client_model/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/prometheus/client_model/go
+  github.com/newrelic/infra-integrations-beta/vendor/github.com/prometheus/common/expfmt:
+    license: Apache-2.0
+    license_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/prometheus/common/LICENSE
+    project_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/prometheus/common/expfmt
   github.com/newrelic/infra-integrations-beta/vendor/github.com/sirupsen/logrus:
     license: MIT
     license_url: github.com/newrelic/infra-integrations-beta/vendor/github.com/sirupsen/logrus/LICENSE
@@ -703,3 +707,11 @@ golang:
     license: Apache-2.0
     license_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kubernetes/LICENSE
     project_url: github.com/newrelic/infra-integrations-beta/vendor/k8s.io/kubernetes/pkg/kubelet/apis/stats/v1alpha1
+  github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg:
+    license: Apache-2.0
+    license_url: github.com/prometheus/common/LICENSE
+    project_url: github.com/prometheus/common/internal/bitbucket.org/ww/goautoneg
+  github.com/prometheus/common/model:
+    license: Apache-2.0
+    license_url: github.com/prometheus/common/LICENSE
+    project_url: github.com/prometheus/common/model
