--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -55,7 +55,7 @@ spec:
       serviceAccountName: newrelic
       containers:
         - name: newrelic-infra
-          image: newrelic/ohaik:1.0.0-beta5.1
+          image: newrelic/infrastructure-k8s:1.0.0-beta1.0
           resources:
             limits:
               memory: 100Mi
