--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -13,6 +13,7 @@ rules:
 - apiGroups: [""]
   resources:
     - "nodes"
+    - "nodes/metrics"
     - "nodes/stats"
     - "nodes/proxy"
     - "pods"
