Revert "Kubelet simple Discovery" (#166)
* Revert "Fix some error assertions on tests (#164)"

This reverts commit 3ab50f3c5ef927e12ea772cbdbce1294c92c8894.

* Revert "Kubelet simple Discovery (#162)"

This reverts commit e3ca0b22490cc8f82f7d303eb5840913d655cdfd.

--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -82,15 +82,7 @@ spec:
                   apiVersion: "v1"
                   fieldPath: "spec.nodeName"
             - name: "NRIA_PASSTHROUGH_ENVIRONMENT"
-              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,NRK8S_NODE_NAME,NRK8S_HOST_IP"
-            - name: "NRK8S_HOST_IP"
-              valueFrom:
-                fieldRef:
-                  fieldPath: "status.hostIP"
-            - name: "NRK8S_NODE_NAME"
-              valueFrom:
-                fieldRef:
-                  fieldPath: "spec.nodeName"
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME"
       volumes:
         - name: host-volume
           hostPath:
