--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -56,7 +56,7 @@ spec:
       serviceAccountName: newrelic
       containers:
         - name: newrelic-infra
-          image: newrelic/infrastructure-k8s:1.0.0-beta2.0
+          image: newrelic/infrastructure-k8s:1.0.0-beta2.1
           resources:
             limits:
               memory: 100Mi
@@ -76,13 +76,15 @@ spec:
               value: "<YOUR_LICENSE_KEY>"
             - name: "NRIA_VERBOSE"
               value: "0"
+           # - name: "CADVISOR_PORT" # Enable direct connection to cAdvisor by specifying the port. Needed for Kubernetes versions prior to 1.7.6.
+           #   value: "4194"
             - name: "NRIA_DISPLAY_NAME"
               valueFrom:
                 fieldRef:
                   apiVersion: "v1"
                   fieldPath: "spec.nodeName"
             - name: "NRIA_PASSTHROUGH_ENVIRONMENT"
-              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME"
+              value: "KUBERNETES_SERVICE_HOST,KUBERNETES_SERVICE_PORT,CLUSTER_NAME,CADVISOR_PORT"
       volumes:
         - name: host-volume
           hostPath:
