--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -54,6 +54,7 @@ spec:
           [{"operator": "Exists", "effect": "NoSchedule"}]
     spec:
       serviceAccountName: newrelic
+      hostNetwork: true # This option is a requirement for the Infrastructure Agent to report the proper hostname in New Relic.
       containers:
         - name: newrelic-infra
           image: newrelic/infrastructure-k8s:1.0.0-beta2.3
