Force kube-state-metrics as label for at least one ksm instance

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -33,12 +33,14 @@ integration:
 rbac: &rbac-create false
 
 ksm-1-1-0-instance-one:
+  nameOverride: kube-state-metrics
   rbac:
     create: *rbac-create
 ksm-1-1-0-instance-two:
   rbac:
     create: *rbac-create
 ksm-1-2-0-instance-one:
+  nameOverride: kube-state-metrics
   rbac:
     create: *rbac-create
 ksm-1-2-0-instance-two:
