--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.rbac }}
+{{- if .Values.rbac }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
@@ -11,4 +11,4 @@ subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccount.name }}
   namespace: default
-{{ end }}
+{{- end }}
