--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.rbac }}
+{{- if .Values.rbac }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -13,4 +13,4 @@ rules:
     - "pods"
     - "services"
   verbs: ["get", "list"]
-{{ end }}
+{{- end }}
