--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: newrelic
+  namespace: default
 automountServiceAccountToken: true
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -37,6 +38,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: newrelic-infra
+  namespace: default
   labels:
     app: newrelic-infra
 spec:
