Add alpine pending pod chart

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/requirements.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/requirements.yaml
@@ -13,3 +13,9 @@ dependencies:
     alias: ksm-instance-two
     tags:
       - two-ksm-instances
+
+  - name: alpine-pending
+    version: "1.0.0"
+    repository: "file://../alpine-pending"
+    tags:
+      - with-pod-pending
